--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-     <!-- Source of design: https://devchallenges.io/challenge/bank-dashboard-challenge-hbank -->
 
 
      <head>
@@ -21,6 +20,20 @@
           <!-- Any icons must be from here :https://icons.getbootstrap.com/ -->
           <main class="Container">
                <header class="mainHeader">
+                    <div class="subHeader">
+                         <div class="Navigation">
+                              <h1> prototype</h1>
+
+                         </div>
+
+                         <div class="cartBox">
+                              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
+                                   <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
+                                 </svg>
+                                 <h3>5</h3>
+                         </div>
+
+                    </div>
 
                </header>
 
