--- a/HTML/cartPage.html
+++ b/HTML/cartPage.html
@@ -7,7 +7,7 @@
           <meta name="description" content="">
           <meta name="viewport" content="width=device-width, initial-scale=1">
           <link rel="stylesheet" href="../CSS/DefaultStyle.css">
-          <link rel="stylesheet" href="style.">
+          <link rel="stylesheet" href="../CSS/cartPage.css">
           <!-- Google fonts at : https://fonts.google.com/share?selection.family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900|Montserrat:ital,wght@0,100..900;1,100..900|Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900|Tajawal:wght@200;300;400;500;700;800;900 -->
           <link rel="preconnect" href="https://fonts.googleapis.com">
           <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
