--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,11 +4,16 @@
      <head>
           <meta charset="utf-8">
           <meta http-equiv="X-UA-Compatible" content="IE=edge">
-          <title></title>
+          <title>Harmony Hub</title>
           <meta name="description" content="">
           <meta name="viewport" content="width=device-width, initial-scale=1">
-          <!-- This is a default style so we will define default component -->
+          <!-- DefaultStyle.css Is only for Styles that need to persist all the pages -->
           <link rel="stylesheet" href="../CSS/DefaultStyle.css">
+
+          <!-- Home.CSS is only for the index page -->
+
+          <link rel="stylesheet" href="../CSS/Home.css">
+
           <!-- Google fonts at : https://fonts.google.com/share?selection.family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900|Montserrat:ital,wght@0,100..900;1,100..900|Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900|Tajawal:wght@200;300;400;500;700;800;900 -->
           <link rel="preconnect" href="https://fonts.googleapis.com">
           <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,16 +27,19 @@
                <header class="mainHeader">
                     <div class="subHeader">
                          <div class="Navigation">
-                              <h1> prototype</h1>
+                              <h1> <span>H</span>armony Hub</h1>
 
                          </div>
 
-                         <div class="cartBox">
+                        <a class="cartBoxA" href="cartPage.html">
+                         <div  class="cartBox">
                               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-cart" viewBox="0 0 16 16">
                                    <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5M3.102 4l1.313 7h8.17l1.313-7zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4m7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4m-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2m7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2"/>
                                  </svg>
                                  <h3 data-Cart-count >5</h3>
                          </div>
+
+                        </a>
 
                     </div>
 
