Updated the product card , updated the cart system, and the ability to add an item to the cart

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -9,6 +9,8 @@
      <meta name="viewport" content="width=device-width, initial-scale=1">
      <!-- DefaultStyle.css Is only for Styles that need to persist all the pages -->
      <link rel="stylesheet" href="../CSS/DefaultStyle.css">
+     <link rel="stylesheet" href="../CSS/Home.css">
+
 
      <!-- Home.CSS is only for the index page -->
 
@@ -44,22 +46,14 @@
 
           <main class="mainContent">
 
-               <a data-Item-Container href="">
-                    <div class="itemContainer">
-                         <div class="itemImage">
-                              <img data-Item-Image src="" alt="">
 
-                         </div>
-                         <div class="itemContent">
-                              <p data-Item-Header class="itemTitle">Guitar 3000</p>
-                              <div class="itemDetails">
-                                   <p data-Item-Price>$209.09</p>
-                                   <button data-Add-ToCart>add to cart</button>
-                              </div>
 
-                         </div>
-                    </div>
-               </a>
+               <div data-PorductList class="PorductList">
+
+                    
+
+
+               </div>
 
           </main>
 
