Automatically initialize, fig data

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -69,7 +69,7 @@
      <audio class="audioMain" />
 
 
-
+     <script src="../JS/Initialize.js" type="module" async defer></script>
      <script src="../JS/main.js" type="module" async defer></script>
 </body>
 
