--- a/HTML/index.html
+++ b/HTML/index.html
@@ -24,7 +24,10 @@
           <header class="mainHeader">
                <div class="subHeader">
                     <div class="Navigation">
-                         <h1> <span>H</span>armony Hub</h1>
+                         <a href="index.html">
+                              <h1> <span>H</span>armony Hub</h1>
+                         </a>
+                         
 
                     </div>
 
