cart form implemented

--- a/HTML/cartPage.html
+++ b/HTML/cartPage.html
@@ -89,18 +89,22 @@
 
             <div class="customer-info">
               <div class="customer-row">
-                <div class="label">Full Name</div>
-                <div class="value">David</div>
+                <div class="label">
+                  Full Name
+                </div>
+                <div class="value">
+                  <input data-input type="text" name="FullName" id="">
+                </div>
               </div>
               <hr />
               <div class="customer-row">
                 <div class="label">Address</div>
-                <div class="value">10122 Main St Delta</div>
+                <div class="value"> <input data-input type="text" name="Address" id=""></div>
               </div>
               <hr />
               <div class="customer-row">
                 <div class="label">Phone Number</div>
-                <div class="value">858-3540-4216</div>
+                <div class="value"> <input data-input type="text" name="PhoneNumber" id=""></div>
               </div>
 
               <hr />
@@ -112,7 +116,7 @@
 
             <!-- Centered Place Order Button -->
             <div class="place-order">
-              <button>Place Order</button>
+              <button data-placeOrder >Place Order</button>
             </div>
           </div>
         </div>
