Toast message functionality implement

--- a/HTML/Product.html
+++ b/HTML/Product.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+    <div class="toast" id="toast">
+        <span class="toast-message">This is a toast notification!</span>
+    </div>
     <main class="Container">
         <header class="mainHeader">
             <div class="subHeader">
@@ -62,6 +65,7 @@
 
 
         <footer class="manFooter">
+           
 
 
 
