--- a/HTML/index.html
+++ b/HTML/index.html
@@ -19,6 +19,9 @@
 </head>
 
 <body>
+     <div class="toast" id="toast">
+          <span class="toast-message"></span>
+     </div>
      <!-- Any icons must be from here :https://icons.getbootstrap.com/ -->
      <main class="Container">
           <header class="mainHeader">
@@ -62,14 +65,13 @@
 
 
           <footer class="manFooter">
-
-
-
+                  
+                  <button class="ToastBut" >Show Toast</button>
 
           </footer>
 
      </main>
-     <audio class="audioMain" />
+     <!-- <audio class="audioMain" /> -->
 
 
      <script src="../JS/Initialize.js" type="module" async defer></script>
