--- a/HTML/login.html
+++ b/HTML/login.html
@@ -13,6 +13,9 @@
           <link rel="stylesheet" href="../CSS/login.css">
      </head>
      <body>
+          <div class="toast" id="toast">
+               <span class="toast-message">This is a toast notification!</span>
+          </div>
 
           <div class="loginBox">
                
