--- a/HTML/login.html
+++ b/HTML/login.html
@@ -11,6 +11,8 @@
           <meta name="description" content="">
           <meta name="viewport" content="width=device-width, initial-scale=1">
           <link rel="stylesheet" href="../CSS/login.css">
+          <link rel="stylesheet" href="../CSS/DefaultStyle.css" />
+
      </head>
      <body>
           <div class="toast" id="toast">
