--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
      <meta name="description" content="">
      <meta name="viewport" content="width=device-width, initial-scale=1">
      <!-- DefaultStyle.css Is only for Styles that need to persist all the pages -->
-     <link rel="stylesheet" href="../CSS/DefaultStyle.css">
-     <link rel="stylesheet" href="../CSS/Home.css">
+     <link rel="stylesheet" href="./CSS/DefaultStyle.css">
+     <link rel="stylesheet" href="./CSS/Home.css">
 
 
      <!-- Home.CSS is only for the index page -->
@@ -27,7 +27,7 @@
           <header class="mainHeader">
                <div class="subHeader">
                     <div class="Navigation">
-                         <a href="index.html">
+                         <a href="/index.html">
                               <h1> <span>H</span>armony Hub</h1>
                          </a>
                          
@@ -71,8 +71,8 @@
      <!-- <audio class="audioMain" /> -->
 
 
-     <script src="../JS/Initialize.js" type="module" async defer></script>
-     <script src="../JS/main.js" type="module" async defer></script>
+     <script src="./JS/Initialize.js" type="module" async defer></script>
+     <script src="./JS/main.js" type="module" async defer></script>
 </body>
 
 </html>
