--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
                     </div>
 
-                    <a class="cartBoxA" href="cartPage.html">
+                    <a class="cartBoxA" href="./HTML/cartPage.html">
                          <div class="cartBox">
                               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                                    class="bi bi-cart" viewBox="0 0 16 16">
