--- a/HTML/Product.html
+++ b/HTML/Product.html
@@ -17,7 +17,7 @@
         <header class="mainHeader">
             <div class="subHeader">
                 <div class="Navigation">
-                    <a href="../index.html">
+                    <a href="/index.html">
                         <h1> <span>H</span>armony Hub</h1>
                     </a>
 
