--- a/HTML/cartPage.html
+++ b/HTML/cartPage.html
@@ -24,7 +24,7 @@
       <header class="mainHeader">
         <div class="subHeader">
           <div class="Navigation">
-            <a href="/index.html">
+            <a href="../index.html">
               <h1><span>H</span>armony Hub</h1>
             </a>
           </div>
